--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ $(document).ready(function() {
 			<div class="about_copy2">	
             <h2>Short Bio  </h2>	
             <br>	
-			<p>I am currently an associate researcher in <A href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual Computing Group</A> at Microsoft Research Asia (MSRA). Before I joined MSRA in Dec. 2015, I received my dual Ph.D. degrees from Zhejiang University and Hong Kong University of Science and Technology, under the supervision of  Prof. <A href="http://www.cad.zju.edu.cn/home/jhyu/English.htm">Jinhui Yu</A> and Prof. <A href="http://www.cse.ust.hk/~psander/">Pedro V. Sander</A>.</p>
+			<p>I am currently a researcher in <A href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual Computing Group</A> at Microsoft Research Asia (MSRA). Before I joined MSRA in Dec. 2015, I received my dual Ph.D. degrees from Zhejiang University and Hong Kong University of Science and Technology, under the supervision of  Prof. <A href="http://www.cad.zju.edu.cn/home/jhyu/English.htm">Jinhui Yu</A> and Prof. <A href="http://www.cse.ust.hk/~psander/">Pedro V. Sander</A>.</p>
            </div> <!-- end .about_copy -->
 	</div> <!-- end .grid_6 -->
 	
