--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ $(document).ready(function() {
 			<div class="about_copy">
             <h1>LIAO Jing  廖 菁</h1>
             <br><br>
-            <p>Resaercher</p>	
+            <p>Researcher</p>	
             <p><a href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual computing group</a>, <A href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank">MSRA</A>
             <p><img src="img/icn_mail.png" alt="" /> jliao AT microsoft DOT com</p>				
 					<p><img src="img/icn_address.png" alt="" /> Building 2, #5 Danling St, Haidian, Beijing<br />
