--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ $(document).ready(function() {
          
           <div class="tt">        
 			<p>Dongdong Chen, Lu Yuan, <strong>Jing Liao</strong>, Nenghai Yu,  Gang Hua.<strong> StyleBank: An Explicit Representation for Neural Image Style Transfer</strong>,<em> CVPR</em>, 2017. </p>
-				<p class="intro_line">[<a href="https://arxiv.org/pdf/1703.09210.pdf">Paper</a>] [<a href="http://home.ustc.edu.cn/~cd722522/videos/building.mp4">Video] </a>[Supplementary]</p>
+				<p class="intro_line">[<a href="https://arxiv.org/pdf/1703.09210.pdf">Paper</a>] [<a href="http://home.ustc.edu.cn/~cd722522/videos/building.mp4">Video</a>] [<a href="http://home.ustc.edu.cn/~cd722522/pubs/StyleBank_supplmentary.pdf">Supplementary</a>]</p>
 				</p>
           
         </div>     
