--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ $(document).ready(function() {
          </div>
          
           <div class="tt">        
-				<p><strong>Jing Liao</strong>, Lu Yuan, Gang Hua, Sing Bing Kang. <strong>Visual Attribute Transfer through Deep Image Analogy</strong>, <em>ACM Transactions on Graphics</em>, (Proc. of Siggraph), 36(4), 2017. </p>
+				<p><strong>Jing Liao</strong>, Yuan Yao, Lu Yuan, Gang Hua, Sing Bing Kang. <strong>Visual Attribute Transfer through Deep Image Analogy</strong>, <em>ACM Transactions on Graphics</em>, (Proc. of Siggraph), 36(4), 2017. </p>
 					<p class="intro_line">[<a href="https://arxiv.org/abs/1705.01088">Paper</a>] [<a href="data/analogy_supplemental.pdf">Supplementary</a>][<a href="https://github.com/msracver/Deep-Image-Analogy">Code</a>]</p>
 				</p>
           
