--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@ $(document).ready(function() {
 		<div class="skills">
 			<h2>Research Interests</h2>
 			<ul>
-				<li><div class="skill1"></p><p></p><p><strong>Computer Graphics</strong></p></div></li>
-				<li><div class="skill2"><p>  Image & video processing</p></div></li>
-				<li><div class="skill3"><p>Non-photorealistic rendering</p></div></li>
-				<li><div class="skill5"><p>Animation</p></div></li>
+				<li><div class="skill2"><p><strong>Computer Graphics</strong></p></div></li>
+				<li><div class="skill3"><p><strong>Computer Vision</strong></p></div></li>
+				<li><div class="skill4"><p><strong>Deep Learning</strong></p></div></li>
+				
 
 			</ul>
 		</div> <!-- end .skills -->
