--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
 <head>
   <meta charset="utf-8">
@@ -80,10 +80,10 @@ $(document).ready(function() {
 			<div class="about_copy">
             <h1>LIAO Jing  廖 菁</h1>
             <br><br>
-            <p>Researcher</p>	
-            <p><a href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual computing group</a>, <A href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank">MSRA</A>
-            <p><img src="img/icn_mail.png" alt="" /> jliao AT microsoft DOT com</p>				
-					<p><img src="img/icn_address.png" alt="" /> Building 2, #5 Danling St, Haidian, Beijing<br />
+            <p>Assistant Professor</p>	
+            <p><a href="https://www.cs.cityu.edu.hk/">Department of Computer Science</a>, <A href="https://www.cityu.edu.hk/cityu/index-sc.htm" target="_blank">City University of Hong Kong</A>
+            <p><img src="img/icn_mail.png" alt="" />jingliao AT cityu.edu.hk</p>				
+					<p><img src="img/icn_address.png" alt="" /> Y6429, 6/F, Yeung Kin Man Academic Building , CityU, Hong Kong<br />
 				
 				
 		</div> <!-- end .about_copy -->
@@ -100,7 +100,7 @@ $(document).ready(function() {
 			<div class="about_copy2">	
             <h2>Short Bio  </h2>	
             <br>	
-			<p>I am currently a researcher in <A href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual Computing Group</A> at Microsoft Research Asia (MSRA). Before I joined MSRA in Dec. 2015, I received my dual Ph.D. degrees from Zhejiang University and Hong Kong University of Science and Technology, under the supervision of  Prof. <A href="http://www.cad.zju.edu.cn/home/jhyu/English.htm">Jinhui Yu</A> and Prof. <A href="http://www.cse.ust.hk/~psander/">Pedro V. Sander</A>.</p>
+			<p>I am an Assistant Professor with the <A href="https://www.cs.cityu.edu.hk/ ">Department of Computer Science</A>, <A href=" https://www.cityu.edu.hk/cityu/index-sc.htm/"> City University of Hong Kong (CityU)</A> since Sep. 2018. Prior to that, I was a Researcher at <A href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual Computing Group</A>, Microsoft Research Asia (MSRA) from 2015 to 2018. I received my dual Ph.D. degrees from Zhejiang University and Hong Kong University of Science and Technology, under the supervision of  Prof. <A href="http://www.cad.zju.edu.cn/home/jhyu/English.htm">Jinhui Yu</A> and Prof. <A href="http://www.cse.ust.hk/~psander/">Pedro V. Sander</A>.</p>
            </div> <!-- end .about_copy -->
 	</div> <!-- end .grid_6 -->
 	
