--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ $(document).ready(function() {
          </div>
          
           <div class="tt">        
-				<p>Zixuan Huang*, Jinghuai Zhang*, <strong>Jing Liao</strong>.<strong> Document Rectification and Illumination Correction using a Patch-based CNN.</strong>, <em>ACM Transaction on Graphics(Proc. Siggraph Asia)</em>, 2019. </p>
+				<p>Xiaoyu Li, Bo Zhang, Pedro Sander<strong>Jing Liao</strong>.<strong> Document Rectification and Illumination Correction using a Patch-based CNN.</strong>, <em>ACM Transaction on Graphics(Proc. Siggraph Asia)</em>, 2019. </p>
 					<p class="intro_line">[<a href="https://arxiv.org/abs/1909.09470">Paper</a>] </p>
         </div>     
 	</div>  	
