--- a/index.html
+++ b/index.html
@@ -443,6 +443,19 @@ $(document).ready(function() {
 	</div>  	
    
     <br></br>
+             <div class="container_16">
+           <div class="grid_5">
+				<a href="img/image41.png" class="single_image"><div class="screenshot41 ss"></div></a>
+         </div>
+         
+          <div class="tt">        
+				<p>Houwen Peng, Hao Du, Hongyuan Yu, Qi Li, <strong>Jing Liao</strong>, Jianlong Fu. <strong> 
+Passport-aware Normalization for Deep Model Protection</strong>, <em>Proc. NeurIPS</em>, 2020. </p>
+					<p class="intro_line">[<a href="https://arxiv.org/pdf/2010.15824.pdf">Paper</a>] [<a href="https://github.com/ZJZAC/Passport-aware-Normalization">Code</a>]</p>
+        </div>     
+	</div>  	
+   
+    <br></br>
        		
                <div class="container_16">
            <div class="grid_5">
