--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ $(document).ready(function() {
 			<div class="about_copy2">	
             <h2>Short Bio  </h2>	
             <br>	
-			<p>I am an Assistant Professor with the <a href="https://www.cs.cityu.edu.hk/ ">Department of Computer Science</a>, <a href=" https://www.cityu.edu.hk/cityu/index-sc.htm/"> City University of Hong Kong (CityU)</a> since Sep. 2018. Prior to that, I was a Researcher at <a href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual Computing Group</a>, Microsoft Research Asia (MSRA) from 2015 to 2018. I received my dual Ph.D. degrees from Zhejiang University and Hong Kong University of Science and Technology, under the supervision of  Prof. <a href="http://www.cad.zju.edu.cn/home/jhyu/English.htm">Jinhui Yu</a> and Prof. <a href="http://www.cse.ust.hk/~psander/">Pedro V. Sander</a>.</p>
+			<p>I am an Assistant Professor with the <a href="https://www.cs.cityu.edu.hk/ ">Department of Computer Science</a>, <a href=" https://www.cityu.edu.hk/cityu/index-sc.htm/"> City University of Hong Kong (CityU)</a> since Sep. 2018. Prior to that, I was a Researcher at <a href="https://www.microsoft.com/en-us/research/group/visual-computing/">Visual Computing Group</a>, Microsoft Research Asia (MSRA). I received my dual Ph.D. degrees from Zhejiang University and Hong Kong University of Science and Technology, under the supervision of  Prof. <a href="http://www.cad.zju.edu.cn/home/jhyu/English.htm">Jinhui Yu</a> and Prof. <a href="http://www.cse.ust.hk/~psander/">Pedro V. Sander</a>.</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			
